# Tender-Eval

./: .gitignore  DESIGN_SYSTEM_IMPROVEMENTS.md  DESIGN_SYSTEM_QUICK_REF.md  FINAL_FIX_SUMMARY.md  FIXES_APPLIED.md  GROQ_INTEGRATION_SUMMARY.md  LOGO_FIXES_COMPLETE.md  QUICK_FIX_SUMMARY.md  QUICK_UI_REFERENCE.md  README.md  README_FIXES.md  SEEDING_SUMMARY.md  TEST_CHUNKING.md  TEST_TENDER_README.md  TOKEN_REDUCTION_STRATEGIES.md  UI_IMPROVEMENTS_SUMMARY.md  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  render.yaml  seed_test_tender_standalone.py  turbo.json  vercel.json
apps/officer-portal/: .env.example  components.json  eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs  tsconfig.json  vercel.json
docs/: LOCAL_DEV.md
services/api/: Dockerfile  README.md  pyproject.toml  seed_test_tender.py
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_initial.py  0002_add_document_page.py  0003_pgvector_passages.py  0004_auth_tables.py  0005_add_agency_logo.py  0006_fix_embedding_dimension.py
services/api/app/: main.py
services/api/app/api/v1/: router.py
services/api/app/api/v1/endpoints/: agencies.py  documents.py  jobs.py  reports.py  review.py  tenders.py
services/api/app/core/: config.py  security.py
services/api/app/db/: models.py  session.py
services/api/app/schemas/: dtos.py
services/api/app/services/: celery_dispatch.py  storage.py
services/worker/: Dockerfile  GROQ_FALLBACK.md  README.md  health.py  pyproject.toml  test_groq_fallback.py
services/worker/worker/: celery_app.py  config.py  tasks.py
services/worker/worker/services/: embedder.py  gemini_client.py  gemini_gate.py  ocr.py  pgvector_store.py  report_builder.py  storage.py
(+73 files in other folders)
